# app

./: .cursorrules  .env.example  .gitignore  .trufflehog-exclude.txt  CHANGELOG.md  README.md  converter.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tauri-dev.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: release-tag.yml
docs/: CHANGELOG_WORKFLOW.md  setapp-release.md  setapp-technical-spike-2026-04-01.md
docs/superpowers/plans/: 2026-04-01-setapp-integration.md
scripts/: build_all.sh  build_macos.sh  build_setapp_macos.sh  build_setapp_test_app.sh  build_windows.sh  bump.sh  cleanup-ts-emit.mjs  create_migration.sh  reset.sh  set-apple-cert-from-file.sh  set-gh-secrets.sh  strip-crossorigin.mjs  tag-release.sh  version-check.mjs  version-sync.mjs
src/: App.css  App.tsx  env.d.ts  global.d.ts  main.tsx  react-diag.ts  tauri-shim.ts  types.ts
src-tauri/: Cargo.toml  Info.setapp.plist  build.rs  tauri.conf.json  tauri.production.conf.json  tauri.setapp-local.conf.json  tauri.setapp.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: setappPublicKey.pem
src-tauri/src/: main.rs  setapp.rs  setapp_bridge.mm
src/api/: ai.ts  http.ts  store.ts
src/components/: UpdateDialog.tsx  WelcomeDialog.tsx
src/components/layout/: StructureSidebar.tsx
src/components/ui/: SubmitButton.tsx  alert.tsx  button.tsx  card.tsx  dialog.tsx  icon-tooltip-button.tsx  popover.tsx  select.tsx  sidebar.tsx  sonner.tsx
src/config/: constants.ts
src/features/auth/: AuthProvider.tsx  LicenseExpirationModal.tsx  api.ts  errors.ts  services.ts  setapp.ts  types.ts
src/features/structureEditor/: StructureEditorPage.tsx  index.ts  types.ts
src/features/structurePreview/: PreviewSection.tsx  PreviewToggleButton.tsx  StructurePreview.tsx
src/hooks/: useAppBoot.ts  useAppInitialization.ts  useDeepLinking.ts  useEditorHistory.ts  useFirstVisit.ts  useKeyboardShortcuts.ts  useLicenseModal.ts  useModalState.ts
src/lib/: filearchitect.ts  router.tsx  utils.ts
src/migrations/: index.ts  types.ts
src/test/: setup.ts  vitest.setup.ts
src/types/: common.ts  file-architect-core.d.ts  filearchitect.ts  index.ts
src/utils/: encryption.ts  errorHandling.ts  fileProcessing.ts  performance.ts
(+37 files in other folders)
